--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,49 +1,41 @@
 pipeline {
     agent any
 
-    environment {
-        APP_NAME = "devops-app"
-        IMAGE_TAG = "${BUILD_NUMBER}"
-    }
-
     stages {
-
         stage('Checkout Code') {
             steps {
-                checkout scm
+                git 'https://github.com/Sandygithubit/devops-final-project.git'
             }
         }
 
         stage('Build Docker Image') {
             steps {
-                sh 'docker build -t $APP_NAME:$IMAGE_TAG .'
+                sh 'docker build -t devops-app:1 .'
             }
         }
 
         stage('Run Docker Container (Test)') {
             steps {
                 sh '''
-                docker rm -f $APP_NAME || true
-                docker run -d --name $APP_NAME -p 3000:3000 $APP_NAME:$IMAGE_TAG
+                docker rm -f devops-test || true
+                docker run -d -p 3000:3000 --name devops-test devops-app:1
                 '''
             }
         }
 
         stage('Deploy to Kubernetes (Local)') {
             steps {
-                sh '''
-                kubectl apply -f k8s/
-                '''
+                sh 'kubectl apply -f k8s/'
             }
         }
     }
 
     post {
-        success {
-            echo "Pipeline completed successfully"
-        }
         failure {
-            echo "Pipeline failed"
+            echo 'Pipeline failed'
+        }
+        success {
+            echo 'Pipeline succeeded'
         }
     }
 }
